Fixed the button background color on Android devices.

--- a/smcgov/index.html
+++ b/smcgov/index.html
@@ -26,6 +26,7 @@
       }
 
       .control button {
+        background-color: #fff;
         border: none;
         text-decoration: none;
         display: inline-block;
