--- a/smcgov/index.html
+++ b/smcgov/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Unoffical San Mateo County Restaurant Health Inspection Results</title>
+    <title>(Unoffical) Map of San Mateo County Restaurant Health Inspection Results</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <style>
       #map {
         height: 100%;
@@ -81,7 +80,6 @@
     <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
-
     <div id="map"></div>
     <script>
       'use strict';
