--- a/mcu/film.html
+++ b/mcu/film.html
@@ -105,5 +105,8 @@
 	<script src="narrative.js"></script>
 	<!--script src="https://cdn.rawgit.com/abcnews/d3-layout-narrative/1.0.0/narrative.js"></script-->
 	<script src="chart.js"></script>
+	<script>
+		load_narrative('film.json')
+	</script>
 </body>
 </html>
