Refactored how the titles are drawn, so their padding is included in the total diagram.

--- a/mcu/abc.html
+++ b/mcu/abc.html
@@ -4,7 +4,7 @@
 <style>
 	/* The different series */
 	.s-agents-of-shield rect {
-		fill: #7a8ca9;
+		fill: orange;
 	}
 	.s-agent-carter rect {
 		fill: #1FB6FF;
