--- a/mcu/film.html
+++ b/mcu/film.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136478-8"></script>
