--- a/smcgov/index.html
+++ b/smcgov/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>(Unoffical) Map of San Mateo County Restaurant Health Inspection Results</title>
+    <title>(Unofficial) Map of San Mateo County Restaurant Health Inspection Results</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
