Added Captian Marvel and Avengers 4.

--- a/mcu/film.html
+++ b/mcu/film.html
@@ -104,6 +104,10 @@
 		.s-doctor-strange rect {
 			fill: #00438d;
 		}
+
+		.s-captain-marvel rect {
+			fill: orange;
+		}
 	</style>
 </head>
 <body>
